# sms_gateway

./: Makefile.in  configure.ac  rules.mk
base/: Makefile.in  base64.c  base64.h  buffer.c  buffer.h  cayman_config.h  cfgparse.c  cfgparse.h  check_sum.c  check_sum.h  cipher.c  cipher.h  cipher_wrap.c  cipher_wrap.h  compiler.h  connection.c  connection.h  des.c  des.h  dlist.c  dlist.h  ev_epoll.c  logger.c  logger.h  poller.h  signal_handler.c  signal_handler.h  sock_stream.c  sock_stream.h  ts_enc_helper.c  ts_enc_helper.h  ts_sid.c  ts_sid.h  ts_time.c  ts_time.h  tsbase.h  tslimits.h  util.c  util.h
base/test/: Makefile.in  cfg_example.cfg  check_sum_test.c  domain_client.c  domain_server.c  ipv4_client.c  ipv4_server.c  test_base64.c  test_cfg.c  test_dlist.c  test_fork.c  test_logger.c  test_sid.c
etc/: gateway.conf  manager.conf  uniqio.conf
src/: Makefile.in
src/gateway/: Makefile.in
src/gateway/channeldll/: Makefile.in  biz.h
src/gateway/common/: Markup.cpp  channel_db.cpp  channel_db.h  charset_conv.cpp  charset_conv.h  gateway.proto  gateway_crypt.cpp  gateway_crypt.h  gateway_util.cpp  gateway_util.h  mongo_pool.cpp  mongo_pool.h  msgque.cpp  msgque.h  protocol.cpp  protocol.h  public.h
src/gateway/gateway/: Makefile.in  gateway.cpp  gateway.h  gateway_biz.cpp  gateway_biz.h  gateway_db.cpp  gateway_db.h  gateway_struct.h  gateway_task.cpp  gateway_task.h
src/gateway/gateway_send/: Makefile.in  gateway_send.cpp  gateway_send.h  send_biz.cpp  send_biz.h  send_db.cpp  send_db.h  send_struct.h  send_task.cpp  send_task.h  send_util.cpp  send_util.h
src/gateway/manager/: Makefile.in  manager.cpp  manager.h  manager_biz.cpp  manager_biz.h  manager_db.cpp  manager_db.h  manager_struct.h  manager_task.cpp  manager_task.h
src/gateway/uniqio/: Makefile.in  uniqio.cpp  uniqio.h  uniqio_biz.cpp  uniqio_biz.h  uniqio_db.cpp  uniqio_db.h  uniqio_struct.h  uniqio_task.cpp  uniqio_task.h  uniqio_util.cpp  uniqio_util.h
tool/: log.sh
tool/go_sim/: manager.go  uniqion.go
tool/go_sim/gateway/: gateway.pb.go  gateway.proto
tool/ipc_tool/: Makefile.in  ipc_tool.cpp  msgque.cpp  msgque.h
tool/simulator/cmpp2/: Makefile.in  cmpp2_sim.conf  cmpp_sim.cpp  cmpp_sim_biz.cpp  cmpp_sim_biz.h  cmpp_sim_task.cpp  cmpp_sim_task.h
tool/simulator/cmpp3/: Makefile.in  cmpp3_sim.conf  cmpp_sim.cpp  cmpp_sim_biz.cpp  cmpp_sim_biz.h  cmpp_sim_task.cpp
tool/simulator/common/: cmpp2.cpp  cmpp2.h  cmpp3.cpp  cmpp3.h  sgip.cpp  sim_struct.h  smgp.cpp  (+2 more)
(+71 files in other folders)
